--- a/index.html
+++ b/index.html
@@ -1,44 +1,78 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Genshin Impact Download</title>
-    <link href="mall.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>GridLayout</title>
+<link href="mall.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<div class="start">
-		<h1>Genshin Impact</h1>
-		<h2>Genshin Impact</h2>
-
-		<!-- download button container-->
-		<div class="download-section">
-			<div class="button-container">
-				<a href="#" class="download-button">Download</a>
-			</div>
-		</div>
-		<img src="warning.png" alt="ESRB Rating" class="corner-image">
-		
-	<div class="cloud-section">
-		<div class="cloud-container">
-			<img src="moln_vanster.png" alt="Moln2" class="moln-image2">
-			<img src="moln_hoger.png" alt="Moln" class="moln-image">
-		</div> 
-	</div>
+	<!-- for nav
+<ul class="nav">
+ <li><a href="index.html" class ="first">Home</a></li>
+ <li><a href="one.html">One</a></li>
+ <li><a href="two.html">Two</a></li> 
+ <li><a href="three.html">Three</a></li>
+<li><a href="four.html">Four</a></li>
+<li><a href="five.html">Five</a></li>
+</ul>
+-->
+<div class="grid-wrapper">
+<div class="grid-obj obj1">Genshin Impact</div>
+<div class="grid-obj obj2"></div>
+<div class="grid-obj obj3"></div>
+<div class="grid-obj obj3"></div>
+<div class="grid-obj obj3"></div>
+<div class="grid-obj obj3"></div>
+<div class="grid-obj objfooter">footer</div>
 </div>
-	
-	<!-- Page 2 content -->
-	<div class="page2">
-		<div class="paimon pcolor">
-			<img src="1d33c1eb834c805f45a3418aeb16486c_105699498384778945.png" alt="paimon">
-		</div>
-	</div>
-
-	<!-- Text section -->
-	<div class="pagetext">
-		<h2>Genshin Impact</h2>
-	</div>
-	
-	<!--Next section starts here-->
-		</body>
+</body>
 </html>
+<!doctype html>
+<html><head>
+<meta charset="utf-8">
+<title> Flexbox</title>
+<link href="mall.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<ul class="nav">
+ <li><a href="index.html">Home</a></li>
+ <li><a href="one.html">One</a></li>
+ <li><a href="two.html">Two</a></li> 
+ <li><a href="three.html">Three</a></li>
+<li><a href="four.html">Four</a></li>
+<li><a href="five.html">five</a></li>
+</ul>
+<h1> Flex-wrapper</h1>
+<div class="flex-wrapper">
+ <div>One</div>
+ <div>Two</div>
+ <div>Three</div> 
+</div>
+<h1> Flex-wrapper-column</h1>
+<div class="flex-wrapper-column">
+ <div>One</div>
+ <div>Two</div>
+ <div>Three</div> 
+</div>
+<h1> Flex-wrapper-column-reverse</h1>
+<div class="flex-wrapper-column-reverse">
+ <div>One</div>
+ <div>Two</div>
+ <div>Three</div> 
+</div>
+<h1> Flex-wrapper-row</h1>
+<div class="flex-wrapper-row">
+ <div>One</div>
+ <div>Two</div>
+ <div>Three</div> 
+</div>
+<h1> Flex-wrapper-row-reverse</h1>
+<div class="flex-wrapper-row-reverse">
+ <div>One</div>
+ <div>Two</div>
+ <div>Three</div> 
+</div>
+</body>
+</html>
+
