--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>GridLayout</title>
-<link href="mall.css" rel="stylesheet" type="text/css">
+	<head>
+		<meta charset="utf-8">
+		<title>GridLayout</title>
+		<link href="mall.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -17,15 +17,16 @@
 <li><a href="five.html">Five</a></li>
 </ul>
 -->
-<div class="grid-wrapper">
-<div class="grid-obj obj1">Genshin Impact</div>
-<div class="grid-obj obj2"></div>
-<div class="grid-obj obj3"></div>
-<div class="grid-obj obj3"></div>
-<div class="grid-obj obj3"></div>
-<div class="grid-obj obj3"></div>
-<div class="grid-obj objfooter">footer</div>
-</div>
+	<div class="grid-wrapper">
+		<div class="grid-obj obj1">
+	<h2>Genshin Impact</h2></div>
+		<div class="grid-obj obj2"></div>
+		<div class="grid-obj obj3"></div>
+		<div class="grid-obj obj3"></div>
+		<div class="grid-obj obj3"></div>
+		<div class="grid-obj obj3"></div>
+		<div class="grid-obj objfooter">footer</div>
+	</div>
 </body>
 </html>
 <!doctype html>
