--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 -->
 	<div class="grid-wrapper">
 		<div class="grid-obj obj1">
-	<h2>Genshin Impact</h2></div>
+	<h2 class="title-text">Genshin Impact</h2>
+		</div>
 		<div class="grid-obj obj2"></div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3"></div>
