added warning sign with pos: absolute
warning sign in the bottom right corner of the page, parallax scrolling

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 		<div class="grid-obj obj1">
 	<h2 class="title-text">Genshin Impact</h2>
 		</div>
-		<div class="grid-obj obj2"></div>
+		<div class="grid-obj obj2 obj2s"></div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj objfooter">footer</div>
+		<div class="warning-sign"></div>
 	</div>
 </body>
 </html>
