flyttade molnen ur warning-sign

--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj objfooter">footer</div>
-		<div class="warning-sign"></div>
+		<div class="warning-sign">
+		</div>
+			
+			<div class="cloud-section">
+				<div class="cloud-container">
+					<img src="moln_hoger.png" alt="Moln-Hoger" class="Moln-Right">
+					<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left">
+					
+			
+			</div>
+		
+		</div>
 	</div>
 </body>
 </html>
