--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 			<div class="cloud-section">
 				<div class="cloud-container">
 					<img src="moln_hoger.png" alt="Moln-Hoger" class="Moln-Right">
-					<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left">
-					
-			
-			</div>
+					<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left"></div>
 		
 		</div>
 	</div>
