--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 	<div class="grid-wrapper">
 		<div class="grid-obj obj1">
 	<h2 class="title-text">Genshin Impact</h2>
+    <div class="cloud-section">
+        <div class="cloud-container">
+            <img src="moln_hoger.png" alt="Moln-Hoger" class="Moln-Right">
+            <img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left">
+        </div>
+    </div>
+</div>
+
 		</div>
 		<div class="grid-obj obj2 obj2s"></div>
 		<div class="grid-obj obj3"></div>
@@ -30,16 +38,10 @@
 		<div class="warning-sign">
 		</div>
 			
-			<div class="cloud-section">
-				<div class="cloud-container">
-					<img src="moln_hoger.png" alt="Moln-Hoger" class="Moln-Right">
-					<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left"></div>
 		
-		</div>
-	</div>
+
 </body>
 </html>
-<!doctype html>
 <html><head>
 <meta charset="utf-8">
 <title> Flexbox</title>
