fixade molnen, de ligger på sida 1
ligger med position: fixed; så de följer med sidan, sitter längst ner på första sidan också, går ej att ändra height och width dock

--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
 	<div class="grid-wrapper">
 		<div class="grid-obj obj1">
 	<h2 class="title-text">Genshin Impact</h2>
-    <div class="cloud-section">
-        <div class="cloud-container">
-            <img src="moln_hoger.png" alt="Moln-Hoger" class="Moln-Right">
-            <img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left">
-        </div>
-    </div>
-</div>
-
 		</div>
 		<div class="grid-obj obj2 obj2s"></div>
 		<div class="grid-obj obj3"></div>
@@ -38,8 +30,14 @@
 		<div class="warning-sign">
 		</div>
 			
+		<div class="cloud-section">
+			<img src="moln_hoger.png" alt="Moln-Hoger" class="Moln-Right">
+		</div>
 		
-
+		<div class="cloud-container">
+			<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left"</div>
+		
+	</div>
 </body>
 </html>
 <html><head>
