--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
 </head>
 
 <body>
-	<!-- for nav
-<ul class="nav">
- <li><a href="index.html" class ="first">Home</a></li>
- <li><a href="one.html">One</a></li>
- <li><a href="two.html">Two</a></li> 
- <li><a href="three.html">Three</a></li>
-<li><a href="four.html">Four</a></li>
-<li><a href="five.html">Five</a></li>
-</ul>
--->
 	<div class="grid-wrapper">
 		<div class="grid-obj obj1">
 	<h2 class="title-text">Genshin Impact</h2>
 		</div>
-		<div class="grid-obj obj2 obj2s"></div>
+		<div class="grid-obj obj2">
+		<div class="Furina">
+			<img src="furina_transparent.png" alt="Furina">
+		</div>
+	</div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3"></div>
@@ -35,7 +29,7 @@
 		</div>
 		
 		<div class="cloud-container">
-			<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left"</div>
+			<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left"></div>
 		
 	</div>
 </body>
