la in arrow img
la in arrow img i css soch hhtml, furina img är för mke åt vänster o pilarna e för mke åt höger

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 	<h2 class="title-text">Genshin Impact</h2>
 		</div>
 		<div class="grid-obj obj2">
+			<h2 class="page2-text">Explore the World of      Teyvat</h2>
 		<div class="Furina">
 			<img src="furina_transparent.png" alt="Furina">
+		</div>
+			<div class="arrow">
+			<img src="pilarrr.png" alt="Pilar">
 		</div>
 	</div>
 		<div class="grid-obj obj3"></div>
@@ -80,4 +84,7 @@
 </div>
 </body>
 </html>
+
+
+<script src="animation.js"></script>
 
