--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 	<h2 class="title-text">Genshin Impact</h2>
 		</div>
 		<div class="grid-obj obj2">
-			<h2 class="page2-text">Explore the World of      Teyvat</h2>
-		<div class="Furina">
+			<h2 class="page2-text">Explore the World of Teyvat</h2>
+		<div class="Furina-container">
+			<div class="Furina">
 			<img src="furina_transparent.png" alt="Furina">
+				</div>
 		</div>
+			<div class="arrow-container">
 			<div class="arrow">
-			<img src="pilarrr.png" alt="Pilar">
+			<img src="pilarrr.png" alt="arrow">
+				</div>
 		</div>
 	</div>
 		<div class="grid-obj obj3"></div>
