har knapp som scrollar ner
knappen längst upp scrollar ner, fixade molnens posiitonering, har pilar och furina img rätt och texten, dålig responsitivtet, 100vh gör inte så bilden på obj3 täcker skärmen

--- a/index.html
+++ b/index.html
@@ -10,85 +10,58 @@
 	<div class="grid-wrapper">
 		<div class="grid-obj obj1">
 	<h2 class="title-text">Genshin Impact</h2>
-		</div>
-		<div class="grid-obj obj2">
-			<h2 class="page2-text">Explore the World of Teyvat</h2>
-		<div class="Furina-container">
-			<div class="Furina">
-			<img src="furina_transparent.png" alt="Furina">
-				</div>
-		</div>
-			<div class="arrow-container">
-			<div class="arrow">
-			<img src="pilarrr.png" alt="arrow">
-				</div>
+			<div class="scrollDownButton1">
+			<button id="scrollDownButton" class="scroll-button">Download</button>
 		</div>
 	</div>
+		</div>
+		<div class="grid-obj obj2">
+			<div class="Textp2">
+			<h2 class="page2-text">Explore the <br> World of Teyvat</h2>
+				</div>
+			<div class="Furina-container">
+				<div class="Furina">
+					<div class="page2">
+			<img src="furina_transparent.png" alt="Furina">
+				</div>
+			</div>
+			<div class="arrow-one">
+				<div class="arrow">
+			<img src="pilar2.png" alt="arrow">
+				</div>
+			</div>
+				<div class="arrow-two">
+					<img src="pilartwo.png" alt="arrow2">
+		</div>
+			</div>
+</div>
 		<div class="grid-obj obj3"></div>
-		<div class="grid-obj obj3"></div>
-		<div class="grid-obj obj3"></div>
-		<div class="grid-obj obj3"></div>
+		<div class="grid-obj obj3a"></div>
+		<div class="grid-obj obj3b"></div>
+		<div class="grid-obj obj3c"></div>
 		<div class="grid-obj objfooter">footer</div>
 		<div class="warning-sign">
 		</div>
 			
 		<div class="cloud-section">
-			<img src="moln_hoger.png" alt="Moln-Hoger" class="Moln-Right">
+			<img src="molnhögerny.png" alt="Moln-Hoger" class="Moln-Right">
 		</div>
 		
 		<div class="cloud-container">
-			<img src="moln_vanster.png" alt="Moln-Vanster" class="Moln-Left"></div>
-		
+			<img src="moln_vänsteriiiigen.png" alt="Moln-Vanster" class="Moln-Left">
 	</div>
-</body>
-</html>
-<html><head>
-<meta charset="utf-8">
-<title> Flexbox</title>
-<link href="mall.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<ul class="nav">
- <li><a href="index.html">Home</a></li>
- <li><a href="one.html">One</a></li>
- <li><a href="two.html">Two</a></li> 
- <li><a href="three.html">Three</a></li>
-<li><a href="four.html">Four</a></li>
-<li><a href="five.html">five</a></li>
-</ul>
-<h1> Flex-wrapper</h1>
-<div class="flex-wrapper">
- <div>One</div>
- <div>Two</div>
- <div>Three</div> 
-</div>
-<h1> Flex-wrapper-column</h1>
-<div class="flex-wrapper-column">
- <div>One</div>
- <div>Two</div>
- <div>Three</div> 
-</div>
-<h1> Flex-wrapper-column-reverse</h1>
-<div class="flex-wrapper-column-reverse">
- <div>One</div>
- <div>Two</div>
- <div>Three</div> 
-</div>
-<h1> Flex-wrapper-row</h1>
-<div class="flex-wrapper-row">
- <div>One</div>
- <div>Two</div>
- <div>Three</div> 
-</div>
-<h1> Flex-wrapper-row-reverse</h1>
-<div class="flex-wrapper-row-reverse">
- <div>One</div>
- <div>Two</div>
- <div>Three</div> 
-</div>
-</body>
-</html>
+	
 
 
-<script src="animation.js"></script>
+<title>Image changer</title>
+  <div>
+    <img id="theImage" src="images/image1.png" alt="Image">
+  </div>
+  <div>
+    <button id="arrow-one"></button>
+    <button id="arrow-two"></button>
+  </div>
+	<script src="animation.js"></script>
+</body>
+</html>
 
