--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 		<meta charset="utf-8">
 		<title>GridLayout</title>
 		<link href="mall.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
+	</head>
+	<body>
 	<div class="grid-wrapper">
 		<div class="grid-obj obj1">
 	<h2 class="title-text">Genshin Impact</h2>
@@ -32,9 +31,9 @@
 			</div>
 				<div class="arrow-two">
 					<img src="pilartwo.png" alt="arrow2">
-		</div>
+				</div>
 			</div>
-</div>
+	</div>
 		<div class="grid-obj obj3"></div>
 		<div class="grid-obj obj3a"></div>
 		<div class="grid-obj obj3b"></div>
@@ -50,18 +49,46 @@
 		<div class="cloud-container">
 			<img src="moln_vänsteriiiigen.png" alt="Moln-Vanster" class="Moln-Left">
 	</div>
+		
+		
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="paimonn.png" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="furina_transparent.png" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="img3.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
+ 
 	
-
-
-<title>Image changer</title>
-  <div>
-    <img id="theImage" src="images/image1.png" alt="Image">
-  </div>
-  <div>
-    <button id="arrow-one"></button>
-    <button id="arrow-two"></button>
-  </div>
-	<script src="animation.js"></script>
-</body>
+		<script src="animation.js"></script>
+	</body>
 </html>
 
