--- a/index.html
+++ b/index.html
@@ -15,76 +15,58 @@
 	</div>
 		</div>
 		<div class="grid-obj obj2">
-			<div class="Textp2">
-			<h2 class="page2-text">Explore the <br> World of Teyvat</h2>
-				</div>
-			<div class="Furina-container">
-				<div class="Furina">
-					<div class="page2">
-			<img src="furina_transparent.png" alt="Furina">
-				</div>
-			</div>
-			<div class="arrow-one">
-				<div class="arrow">
-			<img src="pilar2.png" alt="arrow">
-				</div>
-			</div>
-				<div class="arrow-two">
-					<img src="pilartwo.png" alt="arrow2">
-				</div>
-			</div>
-	</div>
-		<div class="grid-obj obj3"></div>
-		<div class="grid-obj obj3a"></div>
-		<div class="grid-obj obj3b"></div>
-		<div class="grid-obj obj3c"></div>
-		<div class="grid-obj objfooter">footer</div>
-		<div class="warning-sign">
-		</div>
-			
-		<div class="cloud-section">
-			<img src="molnhögerny.png" alt="Moln-Hoger" class="Moln-Right">
-		</div>
-		
-		<div class="cloud-container">
-			<img src="moln_vänsteriiiigen.png" alt="Moln-Vanster" class="Moln-Left">
-	</div>
-		
-		
-<!-- Slideshow container -->
-<div class="slideshow-container">
+        <div class="Textp2">
+            <h2 class="page2-text">Explore the <br> World of Teyvat</h2>
+        </div>
+        <div class="Furina-container">
+            <div class="Furina">
+                <div class="page2"
+<!-->
+                </div>
+            </div>
+            <!-- Arrow buttons for slideshow navigation -->
+            <div class="arrow-one" onclick="plusSlides(-1)">
+                <img src="pilar2.png" alt="arrow">
+            </div>
+            <div class="arrow-two" onclick="plusSlides(1)">
+                <img src="pilartwo.png" alt="arrow2">
+            </div>
+        </div>
 
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="paimonn.png" style="width:100%">
-    <div class="text">Caption Text</div>
-  </div>
+        <!-- Slideshow container (now inside obj2) -->
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="paimonn.png" style="width:100%">
+            </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="furina_transparent.png" style="width:100%">
-    <div class="text">Caption Two</div>
-  </div>
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="furina_transparent.png" style="width:100%">
+            </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
-  </div>
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="nilou.png" style="width:100%">
+            </div>
 
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
+            <!-- Remove dots (replaced by arrows) -->
+        </div>
+    </div>
 
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+    <div class="grid-obj obj3"></div>
+    <div class="grid-obj obj3a"></div>
+    <div class="grid-obj obj3b"></div>
+    <div class="grid-obj obj3c"></div>
+    <div class="grid-obj objfooter">footer</div>
+    <div class="warning-sign"></div>
+    <div class="cloud-section">
+        <img src="molnhögerny.png" alt="Moln-Hoger" class="Moln-Right">
+    </div>
+    <div class="cloud-container">
+        <img src="moln_vänsteriiiigen.png" alt="Moln-Vanster" class="Moln-Left">
+    </div>
+
 
  
 	
