--- a/index.html
+++ b/index.html
@@ -8,26 +8,18 @@
     </head>
     <body>
         <div class="grid-wrapper">
-      <div class="grid-obj obj1">
-                <h2 class="title-text">Genshin Impact</h2>
+            <div class="grid-obj obj1">
+                <h2 class="title-text animate-on-scroll special">Genshin Impact</h2>
                 <div class="scrollDownButton1">
-                    <button id="scrollDownButton" class="scroll-button">
-                        Download
-                    </button>
+                    <button id="scrollDownButton" class="scroll-button animate-on-scroll special">Download</button>
                 </div>
                 <div class="firefly-container"></div>
-                <!-- Firefly container -->
             </div>
             <div class="grid-obj obj2">
                 <div class="Textp2">
-                    <h2 class="page2-text">
-                        Explore the <br />
-                        World of Teyvat
-                    </h2>
+                    <h2 class="page2-text">Explore the <br />World of Teyvat</h2>
                 </div>
-
-                <!-- Slideshow container -->
-                <div class="slideshow-container">
+                <div class="slideshow-container animate-on-scroll">
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 3</div>
                         <img src="ganyu.png" style="width: 100%" />
@@ -40,71 +32,54 @@
                         <div class="numbertext">3 / 3</div>
                         <img src="furina_transparent.png" style="width: 100%" />
                     </div>
-
-                    <!-- Arrow buttons for slideshow navigation -->
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
-
-                <!-- The dots/circles -->
                 <div class="dots-container">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
                     <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
-
-            <div class="grid-obj obj3">
+            <div class="grid-obj obj3 ">
                 <h2 class="section-title">Download Genshin Impact</h2>
-                <div class="download-container">
+                <div class="download-container animate-on-scroll">
                     <div class="download-option right">
                         <img src="windows.png" alt="Windows" />
-                        <a href="download/windows" class="download-button"
-                            >Download for Windows</a
-                        >
+                        <a href="download/windows" class="download-button">Download for Windows</a>
                     </div>
                     <div class="download-option left">
                         <img src="ios.png" alt="iOS" />
-                        <a href="download/ios" class="download-button"
-                            >Download for iOS</a
-                        >
+                        <a href="download/ios" class="download-button">Download for iOS</a>
                     </div>
                     <div class="download-option right">
                         <img src="android.png" alt="Android" />
-                        <a href="download/android" class="download-button"
-                            >Download for Android</a
-                        >
+                        <a href="download/android" class="download-button">Download for Android</a>
                     </div>
                 </div>
             </div>
-
             <div class="grid-obj obj3a">
                 <h2 class="section-title">Explore the Regions</h2>
                 <div class="region-container">
-                    <div class="region">
+                    <div class="region animate-on-scroll">
                         <img src="fontaine.png" alt="Region 1" />
-                        <p>
-Fontaine, the City of Justice, thrives on advanced technology and a rigorous legal system, powered by Hydro energy under the guidance of the Hydro Archon.
-
-</p>
+                        <p>Fontaine, the City of Justice, thrives on advanced technology and a rigorous legal system, powered by Hydro energy under the guidance of the Hydro Archon.</p>
                     </div>
-                    <div class="region">
+                    <div class="region animate-on-scroll">
                         <img src="inazuma.png" alt="Region 2" />
                         <p>Inazuma, a land of thunder and tradition, is ruled by the Electro Archon and seeks to preserve eternity through unyielding ideals and innovation.</p>
                     </div>
-                    <div class="region">
+                    <div class="region animate-on-scroll">
                         <img src="natlan.png" alt="Region 3" />
                         <p>Natlan is a fiery, passionate nation led by the Pyro Archon, where music, dance, and intense emotions fuel its vibrant culture.</p>
                     </div>
                 </div>
             </div>
-
-            <div class="grid-obj objfooter special">
+            <div class="grid-obj objfooter special ">
                 <footer>
                     <p>&copy; 2023 Genshin Impact. All rights reserved.</p>
                 </footer>
             </div>
-
             <div class="warning-sign"></div>
         </div>
         <script src="animation.js"></script>
